Add comment editing and deletion functionality with UI updates and backend integration